k8s/metabase/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metabase
spec:
  replicas: 1
  selector:
    matchLabels:
      app: metabase
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: metabase
    spec:
      nodeSelector:
        eks.amazonaws.com/nodegroup: omegaup-eks-nodes-al2023
      containers:
      - name: metabase
        image: metabase/metabase@sha256:4d33aecc34492e27a4dc0118fd5c7726a541c9775cce8321693b1b3fe9199770
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: metabase-storage
          mountPath: /metabase.db
      volumes:
      - name: metabase-storage
        persistentVolumeClaim:
          claimName: metabase-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: metabase-service
spec:
  selector:
    app: metabase
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
  type: LoadBalancer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: metabase-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.org/hsts: true
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: metabase.omegaup.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: metabase-service
            port:
              number: 3000
  tls:
  - hosts:
    - metabase.omegaup.com
    secretName: metabase-ingress-cert
